--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="main-navigation-wrapper">
             <div class="container">
                 <ul class="site-navigation">
-                    <li><a href="blank.html">Информация</a></li>
+                    <li><a class="site-navigation-current" href="blank.html">Информация</a></li>
                     <li><a href="blank.html">Новости</a></li>
                     <li><a href="price.html">Прайс-лист</a></li>
                     <li><a href="catalog.html">Магазин</a></li>
@@ -144,19 +144,19 @@
                 <li>
                     <a class="social-button" href="#">
                         <span class="visually-hidden">Вконтакте</span>
-                        <img src="img/vk.svg" alt="Вконтакте" />
+                        <svg width="27" height="15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M26.785 13.47l-.092-.168a13.489 13.489 0 00-2.68-2.98c-.395-.354-.771-.729-1.126-1.122a.967.967 0 01-.215-1.182 9.844 9.844 0 011.248-1.777l.91-1.162c1.618-2.085 2.3-3.41 2.047-3.972l-.092-.129a.815.815 0 00-.409-.218 2.287 2.287 0 00-.9 0h-3.98a.442.442 0 00-.277 0h-.307a.506.506 0 00-.153.139.992.992 0 00-.154.238 22.97 22.97 0 01-1.494 3.059c-.348.556-.665.993-.962 1.46a7 7 0 01-.747.883c-.17.17-.352.329-.542.477-.153.119-.276.169-.358.149l-.235-.05a.924.924 0 01-.318-.338 1.321 1.321 0 01-.163-.526V1.614c.02-.205.02-.411 0-.616a2.186 2.186 0 00-.144-.437.74.74 0 00-.286-.338 1.909 1.909 0 00-.512-.178 9.94 9.94 0 00-1.882 0 9.287 9.287 0 00-3.346.308c-.203.1-.384.239-.532.407-.174.198-.195.307-.072.327.235.011.465.069.677.17.21.1.398.242.55.416l.083.16c.092.203.16.416.204.635.061.328.102.66.123.993.041.565.041 1.132 0 1.698 0 .476-.092.844-.133 1.102a2 2 0 01-.276.675c-.045.108-.1.21-.164.308l-.072.07c-.12.043-.249.066-.378.07a.97.97 0 01-.41-.23 3.623 3.623 0 01-.583-.525 7.732 7.732 0 01-.675-.924c-.288-.46-.551-.934-.788-1.42l-.235-.387-.583-1.113c-.238-.465-.45-.942-.635-1.43A.907.907 0 005.38.92h-.072a.882.882 0 00-.184-.16A1.657 1.657 0 004.755.67L.918.7A1.052 1.052 0 00.12.978H.008a.78.78 0 000 .219c.011.125.039.248.082.367A36.205 36.205 0 001.93 5.288a43.045 43.045 0 001.71 2.86c.48.725 1.022 1.41 1.513 2.056.492.645.88 1.062 1.024 1.24l.378.408.348.338c.323.28.665.539 1.023.774.473.335.965.644 1.474.924.58.312 1.2.552 1.842.715a6.504 6.504 0 002.066.278h1.617c.28-.003.547-.11.747-.298v-.07c.045-.078.079-.162.102-.248a2.21 2.21 0 000-.367 4.54 4.54 0 01.092-1.053c.042-.245.12-.483.236-.705.077-.15.177-.287.297-.407l.235-.199h.112a.937.937 0 01.799.209c.317.228.602.495.849.794.266.308.593.665.962 1.043.309.325.652.617 1.023.874l.286.159c.228.129.473.229.727.298.249.087.517.11.777.069l3.633-.1c.284.018.567-.04.819-.168a.663.663 0 00.347-.368.868.868 0 000-.456 1.514 1.514 0 00-.102-.368l-.082-.05z" fill="#fff"/></svg>
                     </a>
                 </li>
                 <li>
                     <a class="social-button" href="#">
                         <span class="visually-hidden">Фейсбук</span>
-                        <img src="img/facebook.svg" alt="Фейсбук" />
+                        <svg width="11" height="23" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3.624 1.131A5.46 5.46 0 017.087.001H11v3.86H8.47a1.216 1.216 0 00-.753.22 1.076 1.076 0 00-.427.62v2.58H11c-.086 1.24-.279 2.48-.44 3.72H7.344v11H2.402v-11H0v-3.7h2.38v-3.59a3.768 3.768 0 011.244-2.58z" fill="#fff"/></svg>
                     </a>
                 </li>
                 <li>
                     <a class="social-button" href="#">
                         <span class="visually-hidden">Инстаграм</span>
-                        <img src="img/instagram.svg" alt="Инстаграм" />
+                        <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18 0H2a2 2 0 00-2 2v16a2 2 0 002 2h16a2 2 0 002-2V2a2 2 0 00-2-2zm-8 6a4 4 0 110 8 4 4 0 010-8zM2.5 18a.47.47 0 01-.5-.44V9h2.1a3.37 3.37 0 00-.1 1 6 6 0 1012 0 3.372 3.372 0 00-.1-1H18v8.5a.47.47 0 01-.44.5H2.5zM18 4.5a.47.47 0 01-.44.5H15.5a.47.47 0 01-.5-.44V2.5a.47.47 0 01.44-.5h2.06a.47.47 0 01.5.44V4.5z" fill="#fff"/></svg>
                     </a>
                 </li>
             </ul>
@@ -174,11 +174,11 @@
     <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
         <p>
             <label class="visually-hidden" for="login-login">Логин</label>
-            <input class="login-icon-user" id="login-login" type="email" name="login" placeholder="email@example.com" required />
+            <input class="login-input login-icon-user" id="login-login" type="email" name="login" placeholder="email@example.com" required />
         </p>
         <p>
             <label class="visually-hidden" for="login-password">Пароль</label>
-            <input class="login-icon-password" id="login-password" type="password" name="password" placeholder="********" required />
+            <input class="login-input login-icon-password" id="login-password" type="password" name="password" placeholder="********" required />
         </p>
         <p class="login-help">
             <label class="login-checkbox">
@@ -188,7 +188,7 @@
             </label>
             <a class="restore" href="#">Я забыл пароль!</a>
         </p>
-        <button class="button" type="submit">Войти</button>
+        <button class="button login-button" type="submit">Войти</button>
     </form>
     <button class="modal-close" type="button" aria-label="Закрыть"></button>
 </section>
@@ -199,6 +199,9 @@
     <!-- Заменяем изображение на iframe, добавлям width, height, allowfullscreen, вместо alt прописываем title -->
     <button class="modal-close" type="button" aria-label="Закрыть"></button>
 </section>
+
+<script src="js/modal-login.js"></script>
+<script src="js/modal-map.js"></script>
 
 </body>
 </html>
